Migrated code to Java 21